# student-dropout-mlops

./: .dockerignore  .env.example  .env.prod.example  .gitignore  DEPLOY.md  LOCAL_SETUP.md  Machine Learning Presentations Marking Scheme 2026 (3).xlsx  README.md  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  guide.md  params.yaml  pyproject.toml  question.md
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml  release.yml
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  cohort.py  model_registry.py  monitoring.py  predict.py  registry.py  retrain.py  schemas.py  students.py
backend/app/core/: config.py  logging.py  metrics.py  security.py
backend/app/interventions/: recommender.py
backend/app/ml/: ablation.py  calibration.py  cost_sensitive.py  data_loader.py  evaluate.py  explain.py  fairness.py  features.py  registry.py  schemas.py  statistics.py  threshold.py  train.py
backend/app/ml/models/: __init__.py  base.py  lightgbm_model.py  logreg.py  mlp.py  random_forest.py  xgboost_model.py
backend/app/monitoring/: audit.py  drift.py  retrain_runs.py  retraining.py
backend/tests/: conftest.py  test_api_auth.py  test_api_drift_retrain.py  test_api_predict.py  test_drift.py  test_evaluate_and_registry.py  test_features.py  test_models.py  test_recommender.py  test_rigor.py  test_schemas.py
backend/tests/fixtures/: sample_student.json
data/samples/: drifted_100_students.csv  sample_100_students.csv
docs/: glossary_and_metrics.md  presentation.md  research_paper.md  supervisor_qa.md  technical_manual.md
frontend/: .dockerignore  .gitignore  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/src/app/core/guards/: auth.guard.ts
frontend/src/app/core/interceptors/: api-key.interceptor.ts  auth.interceptor.ts  error.interceptor.ts
frontend/src/app/core/models/: auth.model.ts  monitoring.model.ts  prediction.model.ts  student.model.ts
frontend/src/app/core/services/: auth.service.ts  monitoring.service.ts  prediction.service.ts  students.service.ts  toast.service.ts
frontend/src/app/core/utils/: format.ts
frontend/src/app/features/admin/: admin.component.ts
frontend/src/app/features/batch/: batch.component.html  batch.component.ts
frontend/src/app/features/dashboard/: dashboard.component.html  dashboard.component.ts
frontend/src/app/features/login/: login.component.ts
frontend/src/app/features/monitoring/: monitoring.component.html  monitoring.component.ts  rigor-card.component.ts
frontend/src/app/features/students/: student-detail-panel.component.ts  students-list.component.html  students-list.component.ts
frontend/src/app/layout/shell/: shell.component.ts
frontend/src/app/layout/sidebar/: sidebar.component.ts
frontend/src/app/layout/topbar/: topbar.component.ts
frontend/src/app/shared/confidence-bar/: confidence-bar.component.ts
frontend/src/app/shared/empty-state/: empty-state.component.ts
frontend/src/app/shared/kpi-card/: kpi-card.component.ts
frontend/src/app/shared/risk-badge/: risk-badge.component.ts
frontend/src/environments/: environment.development.ts  environment.ts
infrastructure/grafana/dashboards/: api-health.json
infrastructure/grafana/provisioning/dashboards/: dashboards.yml
infrastructure/prometheus/: prometheus.yml
infrastructure/terraform/: ec2.tf  iam.tf  key_pair.tf  main.tf  outputs.tf  s3.tf  security_groups.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf  versions.tf
reports/: evaluation.json
reports/retraining/: history.jsonl
scripts/: build_drift_sample.py  deploy_aws.sh  ec2_bootstrap.sh  ec2_reset.sh
(+4 files in other folders)
